--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,13 +9,13 @@ global:
 scrape_configs:
     - job_name: "telemetryguard_api" #name of the job
       metrics_path: /metrics #FastAPI metrics endpoint
-      honor_labels: false
-      honor_timestamps: true
-      scheme: http
-      follow_redirects: true
-      body_size_limit: "0"
-      sample_limit: 0
-      label_limit: 0
-      label_name_length_limit: 0
-      label_value_length_limit: 0
-      target_limit: 0
+      static_configs:
+        -targets: ["api:8000"]
+        -labels:
+          service: "telemetryguard_api"
+          environment: "local"
+          model: "stroke_prediction"
+
+    - job_name: "prometheus"
+      static_configs:
+      -targets: ["prometheus:9090"]
