--- a/infra/helm/api-chart/templates/service.yaml
+++ b/infra/helm/api-chart/templates/service.yaml
@@ -3,10 +3,10 @@
 
 apiVersion: v1
 kind: Service
-metdata:
+metadata:
   name: telemetryguard-api-service
-labels:
-  app: telemetryguard-api
+  labels:
+    app: telemetryguard-api
 spec:
   type: {{ .Values.service.type }}
   ports:
