--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -8,14 +8,15 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 
 # Copy and install dependencies
-COPY requirements.txt /app/
+COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy source code
+COPY api/ /app/api/
 COPY src/ /app/src/
 
 # Expose FastAPI port
 EXPOSE 8000
 
 # Run the FastAPI server
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
