finish k8s api service integration

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,15 +1,17 @@
 # Use lightweight Python base image
 FROM python:3.10-slim
 
-# Prevent pyc creation and buffer issues
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /app
+# Set workdir for the app
+WORKDIR /app/api
 
-# Copy and install dependencies
-COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy root-level requirements.txt (build context = repo root)
+COPY api/requirements.txt /app/api/requirements.txt
+
+# Install dependencies
+RUN pip install --no-cache-dir -r /app/api/requirements.txt
 
 # Copy source code
 COPY api/ /app/api/
@@ -18,5 +20,5 @@ COPY src/ /app/src/
 # Expose FastAPI port
 EXPOSE 8000
 
-# Run the FastAPI server
-CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run FastAPI app
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
