--- a/infra/helm/mlflow-chart/templates/deployment.yaml
+++ b/infra/helm/mlflow-chart/templates/deployment.yaml
@@ -1,12 +1,9 @@
-{{- /*
-Forces Helm to render static manifests even without templating.
-*/ -}}
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: telemetryguard-mlflow
-  namespace: default
+  labels:
+    app: telemetryguard-mlflow
 spec:
   replicas: 1
   selector:
@@ -20,59 +17,61 @@ spec:
       containers:
         - name: telemetryguard-mlflow
           image: telemetryguardacr2ac4.azurecr.io/mlflow:latest
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 5000
           command: ["mlflow"]
+          imagePullPolicy: IfNotPresent
           args:
             - server
-            - --backend-store-uri
-            - sqlite:///mlflow.db
-            - --default-artifact-root
-            - wasbs://mlflow@telemetryguardmlflow.blob.core.windows.net
+            # --- Bind + port ---
             - --host
             - 0.0.0.0
             - --port
             - "5000"
+
+            # --- Backend store (SQLite file inside the container) ---
+            - --backend-store-uri
+            - sqlite:///mlflow.db
+
+            # --- Serve artifacts via the server (IMPORTANT) ---
             - --serve-artifacts
-            # IMPORTANT: Explicitly whitelist all Host headers your cluster will use.
+            - --artifacts-destination
+            - wasbs://mlflow@telemetryguardmlflow.blob.core.windows.net
+
+            # --- Accept calls from svc/port-forward / in-cluster hosts ---
             - --allowed-hosts
             - "*"
-            # Optional: if you have a separate UI calling MLflow from the browser, enable CORS.
-            # - --cors-allowed-origins
-            # - "*"
 
           env:
-            # Use MSI for Azure Blob auth (you must have AKS Workload Identity / pod MI wired up)
+            # MLflow in the pod will use Managed Identity / Azure creds chain to reach Blob
             - name: MLFLOW_AZURE_STORAGE_AUTH_TYPE
               value: "MSI"
             - name: AZURE_STORAGE_ACCOUNT_NAME
               value: "telemetryguardmlflow"
-            # (Optional) Some environments prefer this form:
-            # - name: AZURE_STORAGE_ACCOUNT_URL
-            #   value: "https://telemetryguardmlflow.blob.core.windows.net"
 
-          # Simple health checks so the Service only routes when ready
+          ports:
+            - containerPort: 5000
+              name: http
+
+          # TCP checks are reliable here (HTTP root returns 404)
           readinessProbe:
             tcpSocket:
               port: 5000
             initialDelaySeconds: 5
             periodSeconds: 5
+            timeoutSeconds: 1
+            failureThreshold: 3
+
           livenessProbe:
             tcpSocket:
               port: 5000
             initialDelaySeconds: 15
             periodSeconds: 10
+            timeoutSeconds: 1
+            failureThreshold: 3
 
           resources:
             requests:
-              cpu: "250m"
-              memory: "512Mi"
+              cpu: 250m
+              memory: 512Mi
             limits:
               cpu: "1"
-              memory: "2Gi"
-
-      # Ephemeral DB for demo/dev; swap to a PVC or external DB for prod
-      volumes:
-        - name: mlflow-data
-          emptyDir: {}
+              memory: 2Gi
