updated mlflow Dockerfile

--- a/infra/mlflow/Dockerfile
+++ b/infra/mlflow/Dockerfile
@@ -1,15 +1,12 @@
-# Use the official MLflow image as a base
-FROM ghcr.io/mlflow/mlflow:v2.10.0
-
-# Add Azure SDK dependencies
-RUN pip install --no-cache-dir azure-storage-blob==12.19.1 azure-identity==1.16.0
-
-# Optional: for SQLite and Flask if not already included
-RUN pip install --no-cache-dir gunicorn
-
-# Expose default MLflow port
+# telemetryguard-mlflow/Dockerfile
+FROM python:3.10-slim
+RUN pip install --no-cache-dir mlflow==2.10.0 \
+    azure-identity azure-storage-blob
 EXPOSE 5000
-
-# Entrypoint (same as base, but explicit)
 ENTRYPOINT ["mlflow"]
-CMD ["server", "--host", "0.0.0.0", "--port", "5000"]
+CMD ["server", \
+     "--host","0.0.0.0","--port","5000", \
+     "--backend-store-uri","sqlite:///mlflow.db", \
+     "--serve-artifacts", \
+     "--artifacts-destination","wasbs://mlflow@telemetryguardmlflow.blob.core.windows.net", \
+     "--allowed-hosts","*"]
