reupload mlflow dockerfile

--- a/infra/mlflow/Dockerfile
+++ b/infra/mlflow/Dockerfile
@@ -1,12 +1,20 @@
-# telemetryguard-mlflow/Dockerfile
 FROM python:3.10-slim
-RUN pip install --no-cache-dir mlflow==2.10.0 \
-    azure-identity azure-storage-blob
+
+
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel
+
+# MLflow + Azure libs used by the server to push to Blob
+RUN pip install --no-cache-dir \
+    mlflow==2.10.0 \
+    azure-identity \
+    azure-storage-blob
+
 EXPOSE 5000
+
 ENTRYPOINT ["mlflow"]
-CMD ["server", \
-     "--host","0.0.0.0","--port","5000", \
-     "--backend-store-uri","sqlite:///mlflow.db", \
-     "--serve-artifacts", \
-     "--artifacts-destination","wasbs://mlflow@telemetryguardmlflow.blob.core.windows.net", \
+CMD ["server",
+     "--host","0.0.0.0","--port","5000",
+     "--backend-store-uri","sqlite:///mlflow.db",
+     "--serve-artifacts",
+     "--artifacts-destination","wasbs://mlflow@telemetryguardmlflow.blob.core.windows.net",
      "--allowed-hosts","*"]
