Test model loader

--- a/infra/helm/api-chart/templates/deployment.yaml
+++ b/infra/helm/api-chart/templates/deployment.yaml
@@ -1,19 +1,9 @@
-#How many replicas of the deployment to run
-#Which images to pull
-#Container ports to expose
-#Prometheus annotations for scraping metrics
-
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "telemetryguard-api.fullname" . }}
+  name: telemetryguard-api
   labels:
     app: telemetryguard-api
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    model_version: {{ .Values.env | toYaml | sha256sum | trunc 8 | quote }}
-  annotations:
-    {{- toYaml .Values.podAnnotations | nindent 8 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -24,22 +14,21 @@ spec:
       labels:
         app: telemetryguard-api
       annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/path: {{ .Values.prometheus.path | quote }}
-        prometheus.io/port: "{{ .Values.prometheus.port }}"
+        {{- toYaml .Values.podAnnotations | nindent 8 }}
     spec:
+      serviceAccountName: telemetryguard-api-sa
       containers:
         - name: telemetryguard-api
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - containerPort: {{ .Values.service.targetPort }}
+            - containerPort: {{ .Values.service.port }}
           env:
             {{- toYaml .Values.env | nindent 12 }}
           livenessProbe:
             httpGet:
               path: {{ .Values.livenessProbe.path }}
-              port: {{ .Values.service.targetPort }}
+              port: {{ .Values.service.port }}
             initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
             timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
@@ -47,10 +36,9 @@ spec:
           readinessProbe:
             httpGet:
               path: {{ .Values.readinessProbe.path }}
-              port: {{ .Values.service.targetPort }}
+              port: {{ .Values.service.port }}
             initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
             timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
             failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+      restartPolicy: Always
