--- a/infra/helm/api-chart/values.yaml
+++ b/infra/helm/api-chart/values.yaml
@@ -20,11 +20,12 @@ podAnnotations:
 env:
   - name: MLFLOW_TRACKING_URI
     value: "http://telemetryguard-mlflow-service.default.svc.cluster.local:5000"
-  - name: MODEL_NAME
-    value: "TelemetryGuard_Stroke_Model"
-  - name: MODEL_ALIAS
-    value: "production"
-
+  - name: MLFLOW_AZURE_STORAGE_AUTH_TYPE
+    value: "MSI"
+  - name: AZURE_CLIENT_ID
+    value: "cbb07ae7-03b2-4a81-8df4-2382f65a3969"
+  - name: AZURE_STORAGE_ACCOUNT_NAME
+    value: "telemetryguardmlflow"
 
 livenessProbe:
   path: /health
@@ -40,8 +41,4 @@ readinessProbe:
   timeoutSeconds: 3
   failureThreshold: 6
 
-
 resources: {}
-nodeSelector: {}
-tolerations: []
-affinity: {}
