--- a/infra/helm/api-chart/templates/service.yaml
+++ b/infra/helm/api-chart/templates/service.yaml
@@ -1,6 +1,3 @@
-#Exposes app internally/externally
-
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -9,10 +6,9 @@ metadata:
     app: telemetryguard-api
 spec:
   type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
-      protocol: TCP
-      name: http
   selector:
     app: telemetryguard-api
+  ports:
+    - protocol: TCP
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort | default .Values.service.port }}
