--- a/infra/helm/mlflow-chart/templates/service.yaml
+++ b/infra/helm/mlflow-chart/templates/service.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: telemetryguard-mlflow
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type }}
   selector:
     app: telemetryguard-mlflow
   ports:
-    - name: http
-      port: 5000
-      targetPort: 5000
+    - protocol: TCP
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort | default .Values.service.port }}
