--- a/infra/helm/api-chart/values.yaml
+++ b/infra/helm/api-chart/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: telemetryguardacr2ac4.azurecr.io/api
+  repository: telemetryguardacr17j8.azurecr.io/api
   tag: latest
   pullPolicy: Always
 
