--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,7 +5,12 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
 # Install dependencies required by LightGBM models
-RUN apt-get update && apt-get install -y --no-install-recommends, libgomp1, libstdc++6, libgfortran5 && rm -rf /var/lib/apt/lists/*
+# Install dependencies required by LightGBM models
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libgomp1 \
+    libstdc++6 \
+    libgfortran5 \
+ && rm -rf /var/lib/apt/lists/*
 
 # Set workdir for the app
 WORKDIR /app/api
