--- a/infra/helm/api-chart/values.yaml
+++ b/infra/helm/api-chart/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: telemetryguardacr17j8.azurecr.io/api
-  tag: latest
+  tag: v3
   pullPolicy: Always
 
 service:
