--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.10-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
+ENV PYTHONPATH=/app
 
 # Install dependencies required by LightGBM models
 # Install dependencies required by LightGBM models
